plugins {
    id 'java-library'
    id 'maven-publish'
}

apply from: "$rootDir/gradle/versioning.gradle"

group = 'io.github.sogis'
version = '0.0.1'

sourceCompatibility = '11'
targetCompatibility = '11'

repositories {
    mavenCentral()
    maven { url "http://jars.interlis.ch"; allowInsecureProtocol true }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    
    api group: 'org.apache.ant', name: 'ant', version: '1.10.10' // TODO: api vs implementation?
    
    api 'ch.interlis:ilivalidator:1.11.10'
    api 'ch.interlis:ili2db:4.5.0'
    api 'ch.interlis:ili2pg:4.5.0'
    
    api 'org.postgresql:postgresql:42.2.22'
    api 'org.apache.derby:derby:10.15.2.0'
    api 'org.xerial:sqlite-jdbc:3.8.11.2'
    api 'com.oracle.database.jdbc:ojdbc8:19.3.0.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = group
            artifactId = 'gretl-ng'

            from components.java
        }
    }
}
